# lib-ml

./: README.md  pyproject.toml
.github/worfklows/: CI.yml
.github/workflows/: release.yml
lib-ml/: __init__.py  data_downloader.py  data_split.py  encode_labels.py  preprocess.py  tokenize_features.py
lib_ml/: __init__.py
remla2024_team9_lib_ml/: data_split.py  encode_labels.py  tokenize_features.py
