[tool.poetry]
name = "lib-ml"
version = "0.1.0"
description = "Contains the pre-processing logic for data that is used for training or queries."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "~3.10"
tensorflow = "2.10"
tensorflow-io-gcs-filesystem = "0.27.0"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
