[tool.poetry]
name = "remla2024-team9-lib-ml"
version = "0.1.1"
description = "A library for preprocessing ML data"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
tensorflow = "2.10"
tensorflow-io-gcs-filesystem = "0.27.0"
scikit-learn = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
